--- a/src/main/resources/assets/gregtech/lang/en_us.lang
+++ b/src/main/resources/assets/gregtech/lang/en_us.lang
@@ -2801,6 +2801,7 @@ gregtech.recipe.not_consumed=Not consumed in process
 gregtech.recipe.chance=Chance: %s%%
 gregtech.recipe.blast_furnace_temperature=Temperature: %dK
 gregtech.recipe.eu_to_start=Energy To Start: %dEU
+gregtech.recipe.primitive_blast_fuel=Fuel used: %d
 
 gregtech.fluid.click_to_fill=§7Click with a empty fluid container to fill it from tank.
 gregtech.fluid.click_to_fill.shift=§7(Shift-clicking will fill all containers in your hand)
